style.css
body {
  display: flex;
  flex-direction: column;
  margin-top: 0px;
  margin-bottom: 0px;
  margin-left: auto;
  margin-right: auto;
  
  font-family: 'Roboto', 'Arial', sans-serif;
}
/*header section*/
.header {
  display: flex;
  flex: 0 0 auto;
  background-color: #1F2937;
  align-items: center;
  margin: 0px;
  color: #FFFFFF;
}

.header-logo {
  display: flex;
  margin-left: 12.5%;
  font-size: 24px;
  font-weight: bold;
  color: #F9FAF8
}

.header-links {
  display: flex;
  flex 1;
  margin-left: auto;
  margin-right: 12.5%;
  align-items: center;
  font-size: 18px;
  color: #E5E7EB
}

ul {
  display: flex;
  flex: 1;
  list-style-type: none;
}
li {
  flex: 1 0 auto;
  margin-right: 20px;
  margin-left: 20px;
}
/*section one*/

.section-one {
  display: flex;
  padding-left: 12.5%;
  padding-right: 12.5%;
  padding-top: 100px;
  padding-bottom: 100px;
  background-color: #1F2937;
  align-items: stretch;
  justify-items: space-between;
  
}
/*TODO: fix wrapping*/

.hero-text {
  display: flex;
  flex-direction: column;
  flex: 1 0 auto;
  max-width: 50%;
  gap: 6px;

}

.hero-headertext {
  flex: 1;
  color: #F9FAF8;
  font-size: 48px;
  font-weight: bold;
}

.hero-subtext {
  flex: 1;
  color: #E5E7EB;
  font-size: 18px;
}
.hero-button button {
  width: 100px;
  background-color: #3882F6;
  margin-top: 5px;
  border: 0px;
  border-radius: 5px; 
  color: #FFFFFF;
  font-weight: bolder;
  justify-content: center;
  align-content: center;
  padding: 6px 20px;
}

.hero-image {
  flex: 1 1 auto;
  justify-items: center;
  display: flex;
  margin-left: auto;
  justify-content: center;
}

.hero-image img {
  flex: 0 1 auto;
}
.section-two {
  display: flex;
  flex: 1;
  flex-direction: column;
  padding-top: 40px;
  padding-bottom: 80px;
  gap: 48px;
}

.section-two .headertext {
  flex: 1;
  text-align: center;
  text-justify: center;
  font-size: 36px;
  font-weight: bolder;
}

.section-two .boxes {
  flex: 1;
  display: flex;
  justify-items: auto;
  margin: 0px;
  padding-left: 20%;
  padding-right: 20%;
}

.section-two img {
  border: 5px solid;
  border-color:#3882F6;
  border-radius: 5px;
}

.section-two .boxes .box-box {
  flex: 1 1 auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 0px;
  
}

.section-two .boxes .box-text {
  flex: 1;
  font-size: 16px;
  max-width: 150px;
  text-justify: center;
  text-align: center;
  overflow-wrap: break-word;
}

.section-three {
  background-color: #E5E7EB;
  display: flex;
  flex: 1;
  flex-direction: column;
  font-size: 36px;
  font-weight: 100;
  font-style: italic;
}

.section-three .quote-text {
  flex: 1;
  padding-left: 24%;
  padding-right: 24%;
  padding-top: 96px;
  padding-bottom: 6px;
  text-align: left;
  text-justify: center;
  overflow-wrap: normal;
}

.section-three .quote-author {
  flex: 1;
  padding-left: 24%;
  padding-right: 24%;
  padding-bottom: 100px;
  text-align: right;
  font-size: 32px;
  font-weight: bold;
  font-style: normal;
}

.section-four {
  display: flex;
  flex: 1;
  background-color: #FFFFFF;
  padding-top: 76px;
  padding-bottom: 76px;
  padding-left: 15.5%;
  padding-right: 15.5%;
}

.section-four .cta {
  background-color: #3882F6;
  border-radius: 7px;
  flex: 1;
  display: flex;
  padding: 38px 116px;
  align-items: center;

}

.cta .cta-text {
  display: flex;
  flex-direction: column;
  flex: 1;
  color: #FFFFFF;
}

.cta-text .cta-text-header {
  flex: 1;
  font-size: 28px;
  font-weight: bold;
}

.cta-text .cta-text-body {
  font-weight: 400;
}
.cta-button button {
  width: 100px;
  padding: 6px 20px;
  background-color: #3882F6;
  margin-top: 5px;
  border: 3px solid #FFFFFF;
  border-radius: 5px; 
  color: #FFFFFF;
  font-weight: bolder;
}

.footer {
  background-color: #1F2937;
  flex: 1;
  justify-content: center;
  align-content: center;
  color:#E5E7EB;
  padding: 30px 40%;
}

